--- a/EntityComponentFramework/EntityComponentFramework.csproj
+++ b/EntityComponentFramework/EntityComponentFramework.csproj
@@ -1,17 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\RapidIoC\RapidIoC\RapidIoC.csproj" />
+    <ProjectReference Include="..\..\..\core\RapidIoC\RapidIoC\RapidIoC.csproj" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="echo Copying EntityComponentFramework build output to client folder...&#xD;&#xA;cd $(BaseOutputPath)\$(Configuration)\$(TargetFramework)&#xD;&#xA;copy EntityComponentFramework.dll %25PA_ROOT%25\Shared\ClientBase\Assets\ClientBase\Runtime\lib\ /Y&#xD;&#xA;copy EntityComponentFramework.pdb %25PA_ROOT%25\Shared\ClientBase\Assets\ClientBase\Runtime\lib\ /Y" />
+  </Target>
 
 </Project>
