--- a/EntityComponentFramework/EntityComponentFramework.csproj
+++ b/EntityComponentFramework/EntityComponentFramework.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="echo Copying EntityComponentFramework build output to client folder...&#xD;&#xA;cd $(BaseOutputPath)\$(Configuration)\$(TargetFramework)&#xD;&#xA;copy EntityComponentFramework.dll %25PA_ROOT%25\Shared\ClientBase\Assets\ClientBase\Runtime\lib\ /Y&#xD;&#xA;copy EntityComponentFramework.pdb %25PA_ROOT%25\Shared\ClientBase\Assets\ClientBase\Runtime\lib\ /Y" />
+    <Exec Command="echo Copying EntityComponentFramework build output to client folder...&#xD;&#xA;cd $(BaseOutputPath)\$(Configuration)\$(TargetFramework)&#xD;&#xA;copy EntityComponentFramework.dll %25PA_ROOT%25\Shared\CpCore\Assets\CpCore\Runtime\lib\ /Y&#xD;&#xA;copy EntityComponentFramework.pdb %25PA_ROOT%25\Shared\CpCore\Assets\CpCore\Runtime\lib\ /Y" />
   </Target>
 
 </Project>
